# mpi-incompressible-fluid

./: .gitignore  CMakeLists.txt  Makefile  MaxErrDirich.txt  README.md  README_submission.md  formulae.md  vtk_surface.py
analysis/: README.md  compute_scaling_xy.py  compute_scaling_yz.py  fast_laplacian_neumann.ipynb  fast_laplacian_periodic.ipynb  fast_laplacian_periodic_3d.ipynb  incompressible.ipynb  l2norm.py  laplace3DNeumann_new.py  laplace3dNeumann.ipynb  laplace3dNeumann.py  manufsol.py  neuman.py  plot_convergence.py  plot_parallel_scaling.py  plot_scaling.py  poisson_requirements.md
analysis/vtk/: ascii.vtk  cell.vtk  doublepacked.vtk  floatpacked.vtk  writer.py
artifacts/: .gitignore  README.md
generator/: manufsol.py  manufsol_pressure.py  manufsol_velocity.py
generators/: README.md  manufsol.py  manufsol_pressure.py  manufsol_velocity.py
include/: BoundaryConditions.h  Constants.h  Endian.h  Endians.h  FunctionHelpers.h  InitialConditions.h  InputParser.h  L2Norm.hpp  Manifactured.h  Manufactured.h  ManufacturedPressure.h  ManufacturedVelocity.h  MetaHelpers.h  MetaHelpers.hpp  MomentumEquation.h  MomentumEquationForcing.h  MomentumEquationPressure.h  Norms.h  PressureEquation.h  PressureGradient.h  PressureSolverStructures.h  PressureTensor.h  Real.h  StaggeredTensor.h  StaggeredTensorMacros.h  StaggeringStatus.h  Tensor.h  TestCaseBoundaries.h  Timestep.h  TimestepVelocity.h  VTKDatExport.h  VTKEndians.h  VTKExport.h  VectorFunction.h  VelocityComponent.h  VelocityDivergence.h  VelocityTensor.h  VelocityTensorMacros.h  inputParser.h  output.h  (+2 more)
input/: input.txt  mono.txt  test_1.txt  test_2.txt
plot/: convergence_plot.py
src/: BoundaryConditions.cpp  Constants.cpp  IndexVectorFunction.cpp  InitialConditions.cpp  InputParser.cpp  Norms.cpp  PressureEquation.cpp  PressureSolverStructures.cpp  PressureTensor.cpp  StaggeredTensor.cpp  Tensor.cpp  Timestep.cpp  TimestepVelocity.cpp  VTKDatExport.cpp  VTKExport.cpp  VectorFunction.cpp  VelocityTensor.cpp  input.txt  inputParser.cpp  main.cpp  tensor_usage.cpp  timestep.cpp  vtk_parser.cpp
test/: 2decomp_test.cpp  2decomp_test_parallel.cpp  CMakeLists.txt  benchmark.cpp  convergence.cpp  fftw.cpp  fftw1D_Dirichlet.cpp  fftw1D_Dirichlet_spectral.cpp  fftw1D_Neumann.cpp  fftw3D_Dirichlet.cpp  fftw3D_Neumann.cpp  fftw3D_test.cpp  fftw_neumann.cpp  full_test.cpp  mpi_test.cpp  plot.py  pressure_test.cpp  pressure_test_hn.cpp  pressure_test_mixed.cpp  pressure_test_nhn.cpp  run.sh  tensor_usage_test.cpp  test_tensor.cpp  testing_2decomp.cpp  velocity_test.cpp  velocity_test_mixed.cpp
test/2decomp/: 2decomp_test.cpp  2decomp_test_parallel.cpp  test_2decomp_reverse_engineer.cpp
test/OpenFOAM/test1/: README.md
test/OpenFOAM/test1/system/: blockMeshDict  controlDict  fvSolution
test/OpenFOAM/test2/: README.md
test/OpenFOAM/test2/0/: U  p
test/OpenFOAM/test2/constant/: physicalProperties
test/OpenFOAM/test2/system/: blockMeshDict  controlDict
test/fftw/: fftw1D_Dirichlet.cpp  fftw1D_Dirichlet_spectral.cpp  fftw1D_Neumann.cpp  fftw3D_Dirichlet.cpp  fftw3D_Neumann.cpp  test_fftw_1d_neumann.cpp  test_fftw_1d_neumann_in_place.cpp  test_fftw_1d_periodic.cpp  test_fftw_3d_neumann.cpp
